<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.fisal.propheticmusic.Song5">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/songName_txt"
        android:gravity="center" />
    <TextView
        android:id="@+id/SongName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/songName5" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="14dp"
        android:text="@string/artistName_txt" />
    <TextView
        android:id="@+id/ArtistName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/artistName5" />



    <ImageView
        android:id="@+id/AlbumPhoto"
        android:src="@drawable/samiyusuf"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_weight="1"
        android:scaleType="centerCrop" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:src="@android:drawable/ic_media_play" />


</LinearLayout>
